# Whisper

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Whisper编程语言设计方案.txt  package.ws  registry.json  whisperc.ws
.github/workflows/: ci.yml
crates/whisper-cli/: Cargo.toml
crates/whisper-cli/src/: main.rs
crates/whisper-cli/src/commands/: bootstrap.rs  build.rs  check.rs  mod.rs  repl.rs  run.rs  serve.rs
crates/whisper-cli/tests/: benchmarks.rs  integration_tests.rs
crates/whisper-codegen/: Cargo.toml
crates/whisper-core/: Cargo.toml
crates/whisper-lsp/: Cargo.toml
crates/whisper-lsp/src/: lib.rs  main.rs
crates/whisper-package/: Cargo.toml
crates/whisper-parser/: Cargo.toml
crates/whisper-stdlib/: package.ws
crates/whisper-typecheck/: Cargo.toml
docs/: opcodes.md  spec.md  stdlib.md  tutorial.md
docs/examples/: api_client.ws  data_stats.ws  factorial.ws  fib.ws  fizzbuzz.ws  guess_game.ws  hello.ws  http_get.ws  map.ws  pipeline.ws  server.ws  sum.ws  word_count.ws
paper/: experiment_plan.md  whisper-paper-zh.tex  whisper-paper.tex
paper/data/: benchmark.jsonl  eval.jsonl  train.jsonl
paper/results/: eval_250.json  eval_500.json  eval_750.json  eval_finetuned.json  eval_stdlib.json  exp1_pass_at_1.json  exp2_fair_token.json  token_experiment.json  token_table.tex
paper/scripts/: DEPLOY.md  _test_token.py  check_dataset.py  compare_tokens.py  evaluate.py  exp1_execution_eval.py  exp2_fair_token.py  final_comparison.py  finetune.py  gen_benchmark.py  gen_dataset.py  gen_no_stdlib.py  gen_subsets.py  realworld_token_compare.py  run_exp1_exec.py  run_exp2_token.py  run_exp3_scaling.py  show_all_results.py  token_experiment.py  (+1 more)
playground/: index.html  wasm-runtime.js  whisper-interpreter.js
stdlib/: http.ws  io.ws  json.ws  list.ws  math.ws  mathf.ws  os.ws  str.ws  test.ws
tests/: wasm_test.js  wasm_verify.mjs
vscode-extension/: README.md  extension.js  language-configuration.json  package.json
whisperc/: classify.ws  lexer.ws  main.ws  parser.ws  t1.ws  t12.ws  t13.ws  t14.ws  t15.ws  t16.ws  t18.ws  t2.ws  t20.ws  t25.ws  t29.ws  t35.ws  t40.ws  t51.ws  t55.ws  t72.ws
(+43 files in other folders)
