[package]
name = "whisper-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "whisper"
path = "src/main.rs"

[dependencies]
whisper-core.workspace = true
whisper-parser.workspace = true
whisper-typecheck.workspace = true
whisper-codegen.workspace = true
whisper-package.workspace = true
