[package]
name = "whisper-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "whisper_lsp"
path = "src/lib.rs"

[[bin]]
name = "whisper-lsp"
path = "src/main.rs"

[dependencies]
whisper-parser.workspace = true
whisper-typecheck.workspace = true
serde_json.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
anyhow = "1"
